--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "React proptype for moment module",
   "main": "index.js",
+  "repository": {
+    "type" : "git",
+    "url" : "git@github.com:CalebMorris/react-moment-proptypes.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
