--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "url" : "git@github.com:CalebMorris/react-moment-proptypes.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -Rf ./coverage",
+    "test": "./node_modules/.bin/mocha --recursive --compilers js:babel/register",
+    "lint": "./node_modules/.bin/eslint --ext .js .",
+    "lint-quiet": "./node_modules/.bin/eslint --ext .js --quiet .",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive --compilers js:babel/register"
   },
   "author": {
     "name": "Caleb Morris",
