--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "clean": "rm -Rf ./coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "./node_modules/.bin/mocha --recursive --compilers js:babel/register",
+    "test": "./node_modules/.bin/mocha --recursive --compilers js:babel/register --require ./test/setup.js",
     "lint": "./node_modules/.bin/eslint --ext .js .",
     "lint-quiet": "./node_modules/.bin/eslint --ext .js --quiet .",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter dot --recursive --compilers js:babel/register"
@@ -35,6 +35,7 @@
     "coveralls": "^2.11.3",
     "eslint": "^0.24.0",
     "istanbul": "^0.3.13",
+    "jsdom": "^7.2.2",
     "mocha": "^2.2.1",
     "react": "^0.13.3"
   }
