--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "istanbul": "^0.3.13",
     "jsdom": "^7.2.2",
     "mocha": "^2.2.1",
-    "react": "^0.13.3"
+    "react": "^0.14.6",
+    "react-addons-test-utils": "^0.14.6"
   }
 }
