--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   },
   "devDependencies": {
     "babel": "^5.6.23",
+    "babel-eslint": "^4.1.6",
     "chai": "^2.3.0",
-    "coveralls": "^2.11.3",
+    "coveralls": "^2.11.6",
     "eslint": "^0.24.0",
     "istanbul": "^0.3.13",
     "jsdom": "^7.2.2",
