--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -2,9 +2,11 @@
   "env": {
     "mocha": true
   },
+  "parser": "babel-eslint",
   "rules": {
     "no-unused-expressions": [ 0 ],
     "no-console": [ 0 ],
     "max-statements": [ 0 ],
+    "no-undefined": [ 0 ],
   }
 }
