--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "props",
     "proptypes"
   ],
-  "main": "index.js",
+  "main": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:CalebMorris/react-moment-proptypes.git"
