Re-added `moment` to dependencies
From npm3 forward the behevior of peer-dependencies has changed:

The peer-depency in previous versions would download the package if it
wasn't listed in dependencies section of package.json. This led to some
discussion and eventually to the change so that the peers are used
specificly to find conflicts in transitive dependencies and don't
download any packages unless specified in dependencies.

Announcement: http://blog.npmjs.org/post/110924823920/npm-weekly-5

Discussion: https://github.com/npm/npm/issues/5080#issuecomment-40608092

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "email": "caleb.morris.g@gmail.com"
   },
   "license": "MIT",
+  "dependencies": {
+    "moment": ">=1.6.0"
+  },
   "peerDependencies": {
     "moment": ">=1.6.0"
   },
