--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,6 @@
     "no-negated-in-lhs": [ 2 ],
     "no-obj-calls": [ 2 ],
     "no-regex-spaces": [ 2 ],
-    "no-reserved-keys": [ 2 ],
     "no-sparse-arrays": [ 2 ],
     "no-unreachable": [ 2 ],
     "use-isnan": [ 2 ],
@@ -67,7 +66,6 @@
     "no-caller": [ 2 ],
     "no-div-regex": [ 2 ],
     "no-else-return": [ 2 ],
-    "no-empty-label": [ 2 ],
     "no-eq-null": [ 2 ],
     "no-eval": [ 2 ],
     "no-extend-native": [ 2 ],
@@ -139,8 +137,9 @@
     "consistent-this": [ 2, "self" ],
     "eol-last": [ 2 ],
     "func-style": [ 2, "declaration" ],
-    "indent": [ 2, 2, { "indentSwitchCase" : true } ],
-    "key-spacing": [ 1, { "beforeColon": true, "afterColon": true }],
+    "indent": [ "error", 2 ],
+    "key-spacing": [ 0, { "beforeColon": true, "afterColon": true }],
+    "keyword-spacing": ["warn", { "before": true, "after": true }],
     "linebreak-style": [ 2 ],
     "lines-around-comment": [ 0 ],
     "max-nested-callbacks": [ 2, 3 ],
@@ -169,20 +168,18 @@
     "quotes": [ 2, "single", "avoid-escape" ],
     "semi": [ 2, "always" ],
     "semi-spacing": [ 2, {"before": false, "after": true}],
-    "space-after-keywords": [ 2, "always" ],
     "space-before-blocks": [ 2, "always" ],
     "space-before-function-paren": [ 2, "never" ],
     "space-in-parens": [ 2, "never" ],
     "space-infix-ops": [ 2 ],
-    "space-return-throw-case": [ 2 ],
     "spaced-comment": [ 2 ],
     "wrap-regex": [ 2 ],
 
     // legacy
     "max-depth": [ 2, 2 ],
-    "max-len": [ 2, 100 ],
+    "max-len": [ 2, 120 ],
     "max-params": [ 0, 4 ],
     "max-statements": [ 2, 15 ],
-    "no-bitwise": [ 2 ],
+    "no-bitwise": [ 2 ]
   }
 }
