--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "scripts": {
     "clean": "rm -Rf ./coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "./node_modules/.bin/mocha --recursive --compilers js:babel/register --require ./test/setup.js",
+    "test": "./node_modules/.bin/mocha --recursive --compilers js:babel-core/register",
     "test-all": "npm run test-1.6 && npm run test-1.7 && rm -Rf ./node_modules/moment/ && npm i && npm test",
     "test-1.6": "rm -Rf ./node_modules/moment/ && npm i moment@1.6.0 && npm test",
     "test-1.7": "rm -Rf ./node_modules/moment/ && npm i moment@1.7.0 && npm test",
     "lint": "./node_modules/.bin/eslint --ext .js .",
     "lint-quiet": "./node_modules/.bin/eslint --ext .js --quiet .",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter dot --recursive --compilers js:babel/register"
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter dot --recursive --compilers js:babel-core/register"
   },
   "author": {
     "name": "Caleb Morris",
@@ -36,15 +36,18 @@
     "moment": ">=1.6.0"
   },
   "devDependencies": {
-    "babel": "^5.6.23",
-    "babel-eslint": "^4.1.6",
-    "chai": "^2.3.0",
-    "coveralls": "^2.11.6",
-    "eslint": "^0.24.0",
-    "istanbul": "^0.3.13",
-    "jsdom": "^6.5.1",
-    "mocha": "^2.2.1",
-    "react": "^0.14.6",
-    "react-addons-test-utils": "^0.14.6"
+    "babel-eslint": "^7.1.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.16",
+    "eslint": "^3.15.0",
+    "eslint-plugin-react": "^6.9.0",
+    "istanbul": "^1.1.0-alpha.1",
+    "mocha": "^2.5.3",
+    "react": "^15.4.2",
+    "react-test-renderer": "^15.4.2",
+    "sinon": "^1.17.7"
   }
 }
