--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": ">=1.6.0"
   },
   "devDependencies": {
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
