--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "clean": "rm -Rf ./coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "./node_modules/.bin/mocha --recursive --compilers js:babel/register --require ./test/setup.js",
+    "test": "./node_modules/.bin/mocha --recursive --compilers js:babel/register",
     "test-all": "npm run test-1.6 && npm run test-1.7 && rm -Rf ./node_modules/moment/ && npm i && npm test",
     "test-1.6": "rm -Rf ./node_modules/moment/ && npm i moment@1.6.0 && npm test",
     "test-1.7": "rm -Rf ./node_modules/moment/ && npm i moment@1.7.0 && npm test",
@@ -40,11 +40,13 @@
     "babel-eslint": "^4.1.6",
     "chai": "^2.3.0",
     "coveralls": "^2.11.6",
+    "enzyme": "^2.9.1",
     "eslint": "^0.24.0",
     "istanbul": "^0.3.13",
-    "jsdom": "^6.5.1",
-    "mocha": "^2.2.1",
-    "react": "^0.14.6",
-    "react-addons-test-utils": "^0.14.6"
+    "mocha": "^3.4.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^2.3.6"
   }
 }
