--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "clean": "rm -Rf ./coverage",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test": "./node_modules/.bin/mocha --recursive --require @babel/register --require ./test/suppress-fallback-warning.js",
     "test-all": "npm run test-1.6 && npm run test-1.7 && npm run test-latest",
     "test-1.6": "rm -Rf ./node_modules/moment/ && npm i moment@1.6.0 && npm test",
@@ -43,7 +43,7 @@
     "@babel/register": "^7.5.5",
     "babel-eslint": "^4.1.6",
     "chai": "^4.2.0",
-    "coveralls": "^2.11.6",
+    "coveralls": "^3.0.6",
     "enzyme": "^2.9.1",
     "eslint": "^0.24.0",
     "mocha": "^6.2.0",
