--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
-    "babel-eslint": "^4.1.6",
+    "acorn": "^7.0.0",
+    "babel-eslint": "^10.0.2",
     "chai": "^4.2.0",
     "coveralls": "^3.0.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^0.24.0",
+    "eslint": "^6.1.0",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "react": "^16.9.0",
