Updated engine requirements. Now must be Node 8.x or above
8.x is LTS until 01/20

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "email": "caleb.morris.g@gmail.com"
   },
   "license": "MIT",
+  "engine": {
+    "node": ">= 8.0"
+  },
   "dependencies": {
     "moment": ">=1.6.0"
   },
