Introduced Typescript type definition file

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
+    "@types/prop-types": "^15.7.3",
     "acorn": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "chai": "^4.2.0",
